meja/tests/apply-fail.stderr
File "tests/apply-fail.meja", line 3, characters 5-6:
Error: Incompatable types '_' and 'unit':
Cannot unify 'int' and 'unit'.

