meja/tests/apply-fail.meja
let a : _ = fun (f : _ -> _, x : unit) => {
  f (15);
  f (x);
};
